--- a/cloth.html
+++ b/cloth.html
@@ -158,124 +158,124 @@
 		$(".left-text").change(function(){
 		    $('.text2').html($(this).val());	  
 		});
-		$("back-text").change(function(){
+		$(".back-text").change(function(){
 			$('.text3').html($(this).val());	  
 		});
-		$("right-text").change(function(){
+		$(".right-text").change(function(){
 			$('.text4').html($(this).val());	  
 		});	
 
 	//顏色切換//
 
 	$(".red").click(function(){
-		$(".pos1-f").css('background-image','url("../cloth/img/female/g1_1red.png")');
-		$(".pos2-f").css('background-image','url(../cloth/img/female/g2_1red.png)');
-		$(".pos3-f").css('background-image','url(../cloth/img/female/g3_1red.png)');
-		$(".pos4-f").css('background-image','url(../cloth/img/female/g4_1red.png)');
-		$(".pos1-m").css('background-image','url(../cloth/img/male/b1_1red.png)');
-		$(".pos2-m").css('background-image','url(../cloth/img/male/b2_1red.png)');
-		$(".pos3-m").css('background-image','url(../cloth/img/male/b3_1red.png)');
-		$(".pos4-m").css('background-image','url(../cloth/img/male/b4_1red.png)');
+		$(".pos1-f").css('background-image','url("./img/female/g1_1red.png")');
+		$(".pos2-f").css('background-image','url(./img/female/g2_1red.png)');
+		$(".pos3-f").css('background-image','url(./img/female/g3_1red.png)');
+		$(".pos4-f").css('background-image','url(./img/female/g4_1red.png)');
+		$(".pos1-m").css('background-image','url(./img/male/b1_1red.png)');
+		$(".pos2-m").css('background-image','url(./img/male/b2_1red.png)');
+		$(".pos3-m").css('background-image','url(./img/male/b3_1red.png)');
+		$(".pos4-m").css('background-image','url(./img/male/b4_1red.png)');
 	});
 	
 	$(".blue").click(function(){
-		$(".pos1-f").css('background-image','url(../cloth/img/female/g1_1blue.png)');
-		$(".pos2-f").css('background-image','url(../cloth/img/female/g2_1blue.png)');
-		$(".pos3-f").css('background-image','url(../cloth/img/female/g3_1blue.png)');
-		$(".pos4-f").css('background-image','url(../cloth/img/female/g4_1blue.png)');
-		$(".pos1-m").css('background-image','url(../cloth/img/male/b1_1blue.png)');
-		$(".pos2-m").css('background-image','url(../cloth/img/male/b2_1blue.png)');
-		$(".pos3-m").css('background-image','url(../cloth/img/male/b3_1blue.png)');
-		$(".pos4-m").css('background-image','url(../cloth/img/male/b4_1blue.png)');
+		$(".pos1-f").css('background-image','url(./img/female/g1_1blue.png)');
+		$(".pos2-f").css('background-image','url(./img/female/g2_1blue.png)');
+		$(".pos3-f").css('background-image','url(./img/female/g3_1blue.png)');
+		$(".pos4-f").css('background-image','url(./img/female/g4_1blue.png)');
+		$(".pos1-m").css('background-image','url(./img/male/b1_1blue.png)');
+		$(".pos2-m").css('background-image','url(./img/male/b2_1blue.png)');
+		$(".pos3-m").css('background-image','url(./img/male/b3_1blue.png)');
+		$(".pos4-m").css('background-image','url(/img/male/b4_1blue.png)');
 	});
 
 	$(".green").click(function(){
-		$(".pos1-f").css('background-image','url(../cloth/img/female/g1_1green.png)');
-		$(".pos2-f").css('background-image','url(../cloth/img/female/g2_1green.png)');
-		$(".pos3-f").css('background-image','url(../cloth/img/female/g3_1green.png)');
-		$(".pos4-f").css('background-image','url(../cloth/img/female/g4_1green.png)');
-		$(".pos1-m").css('background-image','url(../cloth/img/male/b1_1green.png)');
-		$(".pos2-m").css('background-image','url(../cloth/img/male/b2_1green.png)');
-		$(".pos3-m").css('background-image','url(../cloth/img/male/b3_1green.png)');
-		$(".pos4-m").css('background-image','url(../cloth/img/male/b4_1green.png)');
+		$(".pos1-f").css('background-image','url(./img/female/g1_1green.png)');
+		$(".pos2-f").css('background-image','url(./img/female/g2_1green.png)');
+		$(".pos3-f").css('background-image','url(./img/female/g3_1green.png)');
+		$(".pos4-f").css('background-image','url(./img/female/g4_1green.png)');
+		$(".pos1-m").css('background-image','url(./img/male/b1_1green.png)');
+		$(".pos2-m").css('background-image','url(./img/male/b2_1green.png)');
+		$(".pos3-m").css('background-image','url(./img/male/b3_1green.png)');
+		$(".pos4-m").css('background-image','url(./img/male/b4_1green.png)');
 	});
 
 	$(".yellow").click(function(){
-		$(".pos1-f").css('background-image','url(../cloth/img/female/g1_1yellow.png)');
-		$(".pos2-f").css('background-image','url(../cloth/img/female/g2_1yellow.png)');
-		$(".pos3-f").css('background-image','url(../cloth/img/female/g3_1yellow.png)');
-		$(".pos4-f").css('background-image','url(../cloth/img/female/g4_1yellow.png)');
-		$(".pos1-m").css('background-image','url(../cloth/img/male/b1_1yellow.png)');
-		$(".pos2-m").css('background-image','url(../cloth/img/male/b2_1yellow.png)');
-		$(".pos3-m").css('background-image','url(../cloth/img/male/b3_1yellow.png)');
-		$(".pos4-m").css('background-image','url(../cloth/img/male/b4_1yellow.png)');
+		$(".pos1-f").css('background-image','url(./img/female/g1_1yellow.png)');
+		$(".pos2-f").css('background-image','url(./img/female/g2_1yellow.png)');
+		$(".pos3-f").css('background-image','url(./img/female/g3_1yellow.png)');
+		$(".pos4-f").css('background-image','url(./img/female/g4_1yellow.png)');
+		$(".pos1-m").css('background-image','url(./img/male/b1_1yellow.png)');
+		$(".pos2-m").css('background-image','url(./img/male/b2_1yellow.png)');
+		$(".pos3-m").css('background-image','url(./img/male/b3_1yellow.png)');
+		$(".pos4-m").css('background-image','url(./img/male/b4_1yellow.png)');
 	});
 
 	$(".purple").click(function(){
-		$(".pos1-f").css('background-image','url(../cloth/img/female/g1_1purple.png)');
-		$(".pos2-f").css('background-image','url(../cloth/img/female/g2_1purple.png)');
-		$(".pos3-f").css('background-image','url(../cloth/img/female/g3_1purple.png)');
-		$(".pos4-f").css('background-image','url(../cloth/img/female/g4_1purple.png)');
-		$(".pos1-m").css('background-image','url(../cloth/img/male/b1_1purple.png)');
-		$(".pos2-m").css('background-image','url(../cloth/img/male/b2_1purple.png)');
-		$(".pos3-m").css('background-image','url(../cloth/img/male/b3_1purple.png)');
-		$(".pos4-m").css('background-image','url(../cloth/img/male/b4_1purple.png)');
+		$(".pos1-f").css('background-image','url(./img/female/g1_1purple.png)');
+		$(".pos2-f").css('background-image','url(./img/female/g2_1purple.png)');
+		$(".pos3-f").css('background-image','url(./img/female/g3_1purple.png)');
+		$(".pos4-f").css('background-image','url(./img/female/g4_1purple.png)');
+		$(".pos1-m").css('background-image','url(./img/male/b1_1purple.png)');
+		$(".pos2-m").css('background-image','url(./img/male/b2_1purple.png)');
+		$(".pos3-m").css('background-image','url(./img/male/b3_1purple.png)');
+		$(".pos4-m").css('background-image','url(./img/male/b4_1purple.png)');
 	});
 
 
 	$(".orange").click(function(){
-		$(".pos1-f").css('background-image','url(../cloth/img/female/g1_1orange.png)');
-		$(".pos2-f").css('background-image','url(../cloth/img/female/g2_1orange.png)');
-		$(".pos3-f").css('background-image','url(../cloth/img/female/g3_1orange.png)');
-		$(".pos4-f").css('background-image','url(../cloth/img/female/g4_1orange.png)');
-		$(".pos1-m").css('background-image','url(../cloth/img/male/b1_1orange.png)');
-		$(".pos2-m").css('background-image','url(../cloth/img/male/b2_1orange.png)');
-		$(".pos3-m").css('background-image','url(../cloth/img/male/b3_1orange.png)');
-		$(".pos4-m").css('background-image','url(../cloth/img/male/b4_1orange.png)');
+		$(".pos1-f").css('background-image','url(./img/female/g1_1orange.png)');
+		$(".pos2-f").css('background-image','url(./img/female/g2_1orange.png)');
+		$(".pos3-f").css('background-image','url(./img/female/g3_1orange.png)');
+		$(".pos4-f").css('background-image','url(./img/female/g4_1orange.png)');
+		$(".pos1-m").css('background-image','url(./img/male/b1_1orange.png)');
+		$(".pos2-m").css('background-image','url(./img/male/b2_1orange.png)');
+		$(".pos3-m").css('background-image','url(./img/male/b3_1orange.png)');
+		$(".pos4-m").css('background-image','url(./img/male/b4_1orange.png)');
 	});
 
 	$(".black").click(function(){
-		$(".pos1-f").css('background-image','url(../cloth/img/female/g1_1black.png)');
-		$(".pos2-f").css('background-image','url(../cloth/img/female/g2_1black.png)');
-		$(".pos3-f").css('background-image','url(../cloth/img/female/g3_1black.png)');
-		$(".pos4-f").css('background-image','url(../cloth/img/female/g4_1black.png)');
-		$(".pos1-m").css('background-image','url(../cloth/img/male/b1_1black.png)');
-		$(".pos2-m").css('background-image','url(../cloth/img/male/b2_1black.png)');
-		$(".pos3-m").css('background-image','url(../cloth/img/male/b3_1black.png)');
-		$(".pos4-m").css('background-image','url(../cloth/img/male/b4_1black.png)');
+		$(".pos1-f").css('background-image','url(./img/female/g1_1black.png)');
+		$(".pos2-f").css('background-image','url(./img/female/g2_1black.png)');
+		$(".pos3-f").css('background-image','url(./img/female/g3_1black.png)');
+		$(".pos4-f").css('background-image','url(./img/female/g4_1black.png)');
+		$(".pos1-m").css('background-image','url(./img/male/b1_1black.png)');
+		$(".pos2-m").css('background-image','url(./img/male/b2_1black.png)');
+		$(".pos3-m").css('background-image','url(./img/male/b3_1black.png)');
+		$(".pos4-m").css('background-image','url(./img/male/b4_1black.png)');
 	});
 
 	$(".lightskyblue").click(function(){
-		$(".pos1-f").css('background-image','url(../cloth/img/female/g1_1lightskyblue.png)');
-		$(".pos2-f").css('background-image','url(../cloth/img/female/g2_1lightskyblue.png)');
-		$(".pos3-f").css('background-image','url(../cloth/img/female/g3_1lightskyblue.png)');
-		$(".pos4-f").css('background-image','url(../cloth/img/female/g4_1lightskyblue.png)');
-		$(".pos1-m").css('background-image','url(../cloth/img/male/b1_1lightskyblue.png)');
-		$(".pos2-m").css('background-image','url(../cloth/img/male/b2_1lightskyblue.png)');
-		$(".pos3-m").css('background-image','url(../cloth/img/male/b3_1lightskyblue.png)');
-		$(".pos4-m").css('background-image','url(../cloth/img/male/b4_1lightskyblue.png)');
+		$(".pos1-f").css('background-image','url(./img/female/g1_1lightskyblue.png)');
+		$(".pos2-f").css('background-image','url(./img/female/g2_1lightskyblue.png)');
+		$(".pos3-f").css('background-image','url(./img/female/g3_1lightskyblue.png)');
+		$(".pos4-f").css('background-image','url(./img/female/g4_1lightskyblue.png)');
+		$(".pos1-m").css('background-image','url(./img/male/b1_1lightskyblue.png)');
+		$(".pos2-m").css('background-image','url(./img/male/b2_1lightskyblue.png)');
+		$(".pos3-m").css('background-image','url(./img/male/b3_1lightskyblue.png)');
+		$(".pos4-m").css('background-image','url(./img/male/b4_1lightskyblue.png)');
 	});
 
 	$(".camblue").click(function(){
-		$(".pos1-f").css('background-image','url(../cloth/img/female/g1_1CamBlue.png)');
-		$(".pos2-f").css('background-image','url(../cloth/img/female/g2_1CamBlue.png)');
-		$(".pos3-f").css('background-image','url(../cloth/img/female/g3_1CamBlue.png)');
-		$(".pos4-f").css('background-image','url(../cloth/img/female/g4_1CamBlue.png)');
-		$(".pos1-m").css('background-image','url(../cloth/img/male/b1_1CamBlue.png)');
-		$(".pos2-m").css('background-image','url(../cloth/img/male/b2_1CamBlue.png)');
-		$(".pos3-m").css('background-image','url(../cloth/img/male/b3_1CamBlue.png)');
-		$(".pos4-m").css('background-image','url(../cloth/img/male/b4_1CamBlue.png)');
+		$(".pos1-f").css('background-image','url(./img/female/g1_1CamBlue.png)');
+		$(".pos2-f").css('background-image','url(./img/female/g2_1CamBlue.png)');
+		$(".pos3-f").css('background-image','url(./img/female/g3_1CamBlue.png)');
+		$(".pos4-f").css('background-image','url(./img/female/g4_1CamBlue.png)');
+		$(".pos1-m").css('background-image','url(./img/male/b1_1CamBlue.png)');
+		$(".pos2-m").css('background-image','url(./img/male/b2_1CamBlue.png)');
+		$(".pos3-m").css('background-image','url(./img/male/b3_1CamBlue.png)');
+		$(".pos4-m").css('background-image','url(./img/male/b4_1CamBlue.png)');
 	});
 
 	$(".camcmyk").click(function(){
-		$(".pos1-f").css('background-image','url(../cloth/img/female/g1_1CamCMYK.png)');
-		$(".pos2-f").css('background-image','url(../cloth/img/female/g2_1CamCMYK.png)');
-		$(".pos3-f").css('background-image','url(../cloth/img/female/g3_1CamCMYK.png)');
-		$(".pos4-f").css('background-image','url(../cloth/img/female/g4_1CamCMYK.png)');
-		$(".pos1-m").css('background-image','url(../cloth/img/male/b1_1CamCMYK.png)');
-		$(".pos2-m").css('background-image','url(../cloth/img/male/b2_1CamCMYK.png)');
-		$(".pos3-m").css('background-image','url(../cloth/img/male/b3_1CamCMYK.png)');
-		$(".pos4-m").css('background-image','url(../cloth/img/male/b4_1CamCMYK.png)');
+		$(".pos1-f").css('background-image','url(./img/female/g1_1CamCMYK.png)');
+		$(".pos2-f").css('background-image','url(./img/female/g2_1CamCMYK.png)');
+		$(".pos3-f").css('background-image','url(./img/female/g3_1CamCMYK.png)');
+		$(".pos4-f").css('background-image','url(./img/female/g4_1CamCMYK.png)');
+		$(".pos1-m").css('background-image','url(./img/male/b1_1CamCMYK.png)');
+		$(".pos2-m").css('background-image','url(./img/male/b2_1CamCMYK.png)');
+		$(".pos3-m").css('background-image','url(./img/male/b3_1CamCMYK.png)');
+		$(".pos4-m").css('background-image','url(./img/male/b4_1CamCMYK.png)');
 	});
 	//往右往左點擊的設定//
 
