藍色男生pos4少打一個.

--- a/cloth.html
+++ b/cloth.html
@@ -187,7 +187,7 @@
 		$(".pos1-m").css('background-image','url(./img/male/b1_1blue.png)');
 		$(".pos2-m").css('background-image','url(./img/male/b2_1blue.png)');
 		$(".pos3-m").css('background-image','url(./img/male/b3_1blue.png)');
-		$(".pos4-m").css('background-image','url(/img/male/b4_1blue.png)');
+		$(".pos4-m").css('background-image','url(./img/male/b4_1blue.png)');
 		$(".text1 , .text2 , .text3 , .text4").css("color","white");
 	});
 
