--- a/cloth.html
+++ b/cloth.html
@@ -107,14 +107,37 @@
 
 
 
-
-
-
-
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 
 <script type="text/javascript">
 
+
+	// 	window.onload=function(){
+	// 	var next=document.getElementById("next");
+	// 	var prev=document.getElementById("prev");
+	// 	var pic=document.getElementById("pic");
+	// 	var n = 1;
+
+	// 	next.onclick=function(){
+	// 	n++;
+	// 		if(n>4){
+	// 			n=1;
+	// 		}
+	// 		pic.src='img/b'+ n +'-1red.png';
+	// 		console.log(n)
+
+	// 	};
+
+	// 	prev.onclick=function(){
+	// 	n--;
+	// 		if(n<1){
+	// 				n=4;
+	// 			}
+	// 		pic.src='img/b'+ n +'-1red.png';
+	// 	};
+	// };
+	
+	
 	//點擊欄位切換//
 	$(".color-icon").click(function(){
 		$(".colors").show();
@@ -335,13 +358,12 @@
 		$(".pos2-m , .pos3-m , .pos4-m , .pos2-f , .pos3-f , .pos4-f , .text2 , .text3 , .text4").hide();
 	   	$(".text1").css("display","inline");
 	   },
-		  );
+	);
 
 	});
 
 
 	$(".yellow").click(function(){
-		$(".text1").css("color","black");
 		$(".text1").css("color","black");
 	});
 
